--- a/roles/ocp4_workload_prepare_hcp/templates/secret.yaml.j2
+++ b/roles/ocp4_workload_prepare_hcp/templates/secret.yaml.j2
@@ -13,5 +13,6 @@ stringdata:
   {# The secret needs an quoted JSON string for the pullSecret. #}
   {# Passing a json string through to_json gives us the quoted string.       #}
   {# To get to the quoted JSON string from a mapping we call to_json twice.  #}
-  pullSecret: "{{ ocp4_workload_prepare_hcp_pull_secret | to_json | to_json if ocp4_workload_prepare_hcp_pull_secret is mapping else ocp4_workload_prepare_hcp_pull_secret | to_json }}"
+  pullSecret: |-
+    {{ ocp4_workload_prepare_hcp_pull_secret | to_json | to_json if ocp4_workload_prepare_hcp_pull_secret is mapping else ocp4_workload_prepare_hcp_pull_secret | to_json }}
   ssh-publickey: "{{ ocp4_workload_prepare_hcp_ssh_public_key | default('') }}"
