--- a/roles/ocp4_workload_register_sno/templates/managedcluster.yaml.j2
+++ b/roles/ocp4_workload_register_sno/templates/managedcluster.yaml.j2
@@ -6,6 +6,7 @@ metadata:
   labels:
     cloud: Amazon
     vendor: OpenShift
+    cluster.open-cluster-management.io/clusterset: managed
 spec:
   hubAcceptsClient: true
   leaseDurationSeconds: 60
